# Guardian_of_health

./: .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README (ENG).md  README (RUS).md  config.yaml  docker-compose.yml  final_video.py  guardian_final_working.py  guardian_full.py  guardian_web.py  main.py  pyproject.toml  requirements.txt  run.bat  run.sh  setup.py  start.py
src/: app.py
src/analytics/: eye_tracker.py  fatigue_detector.py  posture_analyzer.py
src/config/: config_loader.py
src/core/: video_engine.cpp
src/logging/: logger.py
src/ui/: tray_app.py
src/utils/: daemon.py  exceptions.py  export_pdf.py  performance.py  validators.py
src/voice/: commands.py  voice_commander.py
src/web/: api_docs.py  server.py
src/web/static/css/: style.css
src/web/static/js/: dashboard.js
src/web/templates/: dashboard.html
tests/: test_eye_tracker.py  test_posture_analyzer.py  test_voice_commands.py
