[build-system]
requires = [
    "setuptools>=68.2.0",
    "wheel",
    "pybind11>=2.12.0",
    "numpy>=1.26.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "focus-guardian"
version = "2.0.0"
description = "AI Health Assistant for posture correction and eye fatigue monitoring"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "FocusGuardian Team", email = "team@focusguardian.ai"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Video :: Capture",
]

dependencies = [
    "numpy>=1.26.0",
    "opencv-python>=4.9.0",
    "mediapipe>=0.10.8",
    "pybind11>=2.12.0",
    "PyQt6>=6.6.0",
    "plyer>=0.9.0",
    "Flask>=3.0.0",
    "Flask-SocketIO>=5.3.0",
    "Flask-CORS>=4.0.0",
    "python-socketio>=5.9.0",
    "eventlet>=0.34.0",
    "vosk>=0.3.45",
    "pyaudio>=0.2.11",
    "pyttsx3>=2.90",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "rich>=13.7.0",
]

[project.scripts]
focus-guardian = "main:main"

[tool.setuptools]
packages = ["src", "src.core", "src.analytics", "src.voice", "src.ui", "src.web"]

[tool.setuptools.package-data]
"*" = ["*.cpp", "*.html", "*.css", "*.js"]

# Code Quality Tooling Configurations.

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
